add some stuff from facebook

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+	<!-- Facebook embed SDK -->
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="wQodPtDd"></script>
 <header class="header">
 	<div class="container">
 		<nav class="navbar navbar-inverse" role="navigation">
@@ -35,7 +38,8 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
 	            </button>
-	            <a href="#" class="navbar-brand scroll-top logo"><b>Web</b>Trends</a>
+	            <!-- <a href="#" class="navbar-brand scroll-top logo"></a> -->
+			<img src="images/CIALogo.jpg" alt="CIA Logo" class="navbar-brand scroll-top logo">
         	</div>
         	<!--/.navbar-header-->
 	        <div id="main-nav" class="collapse navbar-collapse">
@@ -65,27 +69,23 @@
 		    <p><a href="#about" class="button-outline"> More.. </a></p>-->
                <div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2>Easy management</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<a href="#" class="da-link button-outline">Read more</a>
+					<h2>Slide text 1</h2>
+					<p>Slide text 1</p>
 					<div class="da-img"></div>
 				</div>
 				<div class="da-slide">
-					<h2>Revolution</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-					<a href="#" class="da-link button-outline">Read more</a>
+					<h2>Slide text 1</h2>
+					<p>Slide text 1</p>
 					<div class="da-img"></div>
 				</div>
 				<div class="da-slide">
-					<h2>Warm welcome</h2>
-					<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
-					<a href="#" class="da-link button-outline">Read more</a>
+					<h2>Slide text 2</h2>
+					<p>Slide text 2</p>
 					<div class="da-img"></div>
 				</div>
 				<div class="da-slide">
-					<h2>Quality Control</h2>
-					<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					<a href="#" class="da-link button-outline">Read more</a>
+					<h2>Slide text 3</h2>
+					<p>Slide text 3</p>
 					<div class="da-img"></div>
 				</div>
 				<nav class="da-arrows">
@@ -113,31 +113,23 @@
 							    <div class="heading text-center">
 								<!-- Heading -->
 								<h2>About Us</h2>								 
-								<p>At lorem ipsum available, but the majority have suffered alteration humour or randomised</p>
-							</div>
-							
-								<div class="row">
-									<div class="col-md-4 col-sm-4">										
-											<h3><i class="fa fa-desktop color"></i> &nbsp; What we do?</h3>
-											<!-- Paragraph -->
-											<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>										
-									</div>
-									<div class="col-md-4 col-sm-4">										
-											<!-- Heading -->
-											<h3><i class="fa fa-cloud color"></i> &nbsp;Why choose us?</h3>
-											<!-- Paragraph -->
-											<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p> 										
-									</div>
-									<div class="col-md-4 col-sm-4">										
-											<!-- Heading -->
-											<h3><i class="fa fa-home color"></i> &nbsp;Where are we?</h3>
-											<!-- Paragraph -->
-											<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p> 										
-									</div>
-								</div>
-							</div>
-	<!--/.container-->
-</section> 
+								<p>
+									In the summer of 2004 a group of guys got together to show off some of their classic cars from around the Winterset area. Those “guys” were: Ray Dawson, Bill McDonald, Bob Stephens, Roger Hanson, Dan Bush and Terry Housman. They thought this was such a good thing to do that the following year, 2005 the Central Iowa Auto Club was started. First it was a couple times during the summer and then the chamber of commerce contacted us on running the Madison County Car Show during the bridge festival.  We accepted the offer and so it started, show and shines and car shows. 
+								</p>
+								<p> 
+  									In 2006 we set up a schedule of 6 show and shines, once a month from April to September out at the Sports Page Bar parking lot. The shows were two on Thursday evening’s from 6-8 pm and the other four were on Saturdays from 2-4 pm. These show and shines were very successful, but the parking lot was in such disrepair, that we moved the shows out to the Maid-Rite in 2008. Again, the shows were so popular that we were running out of space and had to move again. 
+								</p>
+								<p>
+									This time in 2013, we asked the chamber about allowing us to have one side of the square from 4-7 pm on the second Saturday of the month. They welcomed us with open arms to help promote the business on the square.  We now block off the north side of the square and ½ the block on the west side.  Sometimes we have had cars parked down the middle of the street as this was not enough area on some days. 
+  We have had very good luck with all the businesses on the square not complaining about parking, but some have thanked us as it sometimes help bring in business in to their stores. 
+								</p>
+								<p>
+ 								In 2005 we started out as Central Iowa Auto Club.  As the years went by, things were getting to the point that we needed to do something about protecting our selves, so we talked to an attorney and proceeded with getting incorporated. In 2015 we were about to get a donation from a local person, Marvin Cox, of a 1938 Packard. In order for us not to get overwhelmed, we finally concluded that it was in our best interest to go for a non-profit filing. So in June of 2016 I received a letter stating that we had been accepted as a 501(3) C Non-Profit organization.  This helped us out on not having to pay taxes on the donation of the Packard.
+								</p>
+								<p>
+								Over the years we have given out several $500 scholarships, we have helped families at Thanksgiving by buying food for the Thanksgiving dinner, and at Christmas, we go shopping for more families for CRISP and buy clothing and toys to put under the Christmas tree. The Christmas shopping is a fun event for us as we get together as a group and go to Walmart and buy as much as we can for each family (we set a limit on each family member) then afterwards we go out a celebrate to one of the local restaurants and have a evening meal.
+								</p>
+							</section> 
 
 <section id="services" class="page-section">
 	<div class="container">
@@ -429,29 +421,28 @@
                 <div class="heading text-center">
 								<!-- Heading -->
 								<h2>Contact Us</h2> 
-								<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered.</p>
+								<p>The best way to contact us is....</p>
 							</div>
 						<div class="col-sm-12">
 								<div id="mapWrapper" class="mb30" style="position: relative; maring-bottom:20px; background-color: rgb(229, 227, 223); overflow: hidden; -webkit-transform: translateZ(0px);">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1944302.5352489671!2d77.4535942421874!3d17.863656040793934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1398658474236" width="1200" height="400" frameborder="0" style="border:0"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.432998731825!2d-93.94369212322987!3d41.32119690009713!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ec0f1b9c5a5b67%3A0xc82a79dabe45d365!2s2283%20Pioneer%20Ave%2C%20Winterset%2C%20IA%2050273!5e0!3m2!1sen!2sus!4v1721021291543!5m2!1sen!2sus" width="1200" height="400" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div><br/>
 							</div>
             </div>
 
 					<div class="row mrgn30">
                         				<div class="col-sm-4">
+									<h4>Email:</h4>
+									<email>
+										centraliowaauto@yahoo.com<br>
+									</email>
 									<h4>Address:</h4>
 									<address>
-										WebThemez Company<br>
-										134 Stilla. Tae., 414515<br>
-										Leorislon, SA 02434-34534 USA <br>
-									</address>
-									<h4>Phone:</h4>
-									<address>
-										12345-49589-2<br>
+										2283 Pioneer Ave.,<br>
+										Winterset, IA, United States, 50273 <br>
 									</address>
 								</div>
-								<form method="post" action="" id="contactfrm" role="form">
+								<!-- <form method="post" action="" id="contactfrm" role="form">
 
 									<div class="col-sm-4"> 
 										<div class="form-group">
@@ -475,7 +466,7 @@
 										<button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit"> Submit</button>		
 										<div class="result"></div>										
 									</div>                        									
-								</form>
+								</form> -->
 							</div>
         </div>
 	<!--/.container-->
