--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="row">
 				<div class="heading text-center">
 					<!-- Heading -->
-					<h2>Contact Us</h2>
+					<h2>Contact us</h2>
 					<div class="facebook-link">
 						<a href="https://www.facebook.com/ClAutoClub" target="_blank">
 							<img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
@@ -142,7 +142,7 @@
 		<div class="container">
 			<div class="heading text-center">
 				<!-- Heading -->
-				<h2>About Us</h2>
+				<h2>About us</h2>
 				<p>
 					In the summer of 2004, a group of car enthusiasts in Winterset, including Ray Dawson, Bill McDonald,
 					Bob Stephens, Roger Hanson, Dan Bush, and Terry Housman, started showcasing their classic cars. This
