--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 			<div class="container banner-content">
 			</div>
 		</div>
-		<section class="sub-heading">
+		<section class="header-banner">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-12" >
 						<h2>Where Classic Cars are Fun to See and Drive! Keep'em Rollin'!!!</h2>
 					</div>
 				</div>
