--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 				<div id="main-nav" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav" id="mainNav">
 						<li class="active"><a href="#home" class="scroll-link">Home</a></li>
-						<li><a href="#nextshow" class="scroll-link">2024 Shows</a></li>
+						<li><a href="#nextshow" class="scroll-link">2024 shows</a></li>
+						<li><a href="#registration" class="scroll-link">Registration</a></li>
 						<li><a href="#contactus" class="scroll-link">Contact us</a></li>
 						<li><a href="#aboutus" class="scroll-link">About us</a></li>
 					</ul>
@@ -81,11 +82,13 @@
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-lg-12">
-						<h2>Next show</h2>
+						<h2>2024 shows</h2>
 						<img src="images/ENWIAdd121123_4.jpg" style="width: 75%">
 					</div>
-					<div class="col-lg-12">
+					<div class="col-lg-12" id="registration">
 						<h2>Madison County Car Show Registration</h2>
+						<a class="link" href="http://qrto.ai/u-qNWBT1" target="_blank" rel="noopener noreferrer">Click here</a>
+						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
 					</div>
 				</div>
