clean up and add authors

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<title>Central Iowa Auto</title>
 	<meta name="description" content="">
 	<meta name="author" content="Corbin Kems">
+	<meta name="author" content="Braden Buckalew">
 	<!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -65,18 +66,17 @@
 
 	<section id="home" class="page-section">
 		<div class="banner-container">
-			<!-- <div class="bannerOverlay"></div> -->
 			<div class="container banner-content">
 			</div>
 		</div>
 		<section class="header-banner">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12" >
+					<div class="col-lg-12">
 						<h2>Where Classic Cars are Fun to See and Drive! Keep'em Rollin'!!!</h2>
 					</div>
 				</div>
-			</div><!-- END container -->
+			</div>
 		</section>
 		<section id="nextshow">
 			<div class="container text-center">
@@ -87,14 +87,14 @@
 					</div>
 					<div class="col-lg-12" id="registration">
 						<h2>Madison County Car Show Registration</h2>
-						<a class="link" href="http://qrto.ai/u-qNWBT1" target="_blank" rel="noopener noreferrer">Click here</a>
+						<a class="link" href="http://qrto.ai/u-qNWBT1" target="_blank" rel="noopener noreferrer">Click
+							here</a>
 						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
 					</div>
 				</div>
 			</div>
 		</section>
-		<!--/.container-->
 	</section>
 
 	<section id="contactus" class="page-section darkBg pDark">
@@ -103,38 +103,37 @@
 			</div>
 			<div class="row">
 				<div class="heading text-center">
-					<!-- Heading -->
 					<h2>Contact us</h2>
 					<div class="facebook-link">
 						<a href="https://www.facebook.com/ClAutoClub" target="_blank">
-							<img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+								alt="Facebook Logo">
 							<span>Follow us on Facebook</span>
 						</a>
 					</div>
 					<div class="col-sm-4">
-				</div>
-				<div class="col-sm-12">
-					<div class="email-link">
-						<a href="mailto:centraliowaauto@yahoo.com">
-							<span>Email Us: centraliowaauto@yahoo.com</span>
-						</a>
+					</div>
+					<div class="col-sm-12">
+						<div class="email-link">
+							<a href="mailto:centraliowaauto@yahoo.com">
+								<span>Email Us: centraliowaauto@yahoo.com</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-12">
+						<h4>Location:</h4>
+						<div id="mapWrapper" class="mb30"
+							style="position: relative; maring-bottom:20px; background-color: rgb(229, 227, 223); overflow: hidden; -webkit-transform: translateZ(0px);">
+							<iframe
+								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23964.19757826459!2d-94.03857947990964!3d41.34094778431298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ec0dad6f398b71%3A0x6ed4fbfb7f65dd4d!2sWinterset%2C%20IA%2050273!5e0!3m2!1sen!2sus!4v1721193617440!5m2!1sen!2sus"
+								width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+								referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div><br />
 					</div>
 				</div>
-				<div class="col-sm-12">
-					<h4>Location:</h4>
-					<div id="mapWrapper" class="mb30"
-						style="position: relative; maring-bottom:20px; background-color: rgb(229, 227, 223); overflow: hidden; -webkit-transform: translateZ(0px);">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23964.19757826459!2d-94.03857947990964!3d41.34094778431298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ec0dad6f398b71%3A0x6ed4fbfb7f65dd4d!2sWinterset%2C%20IA%2050273!5e0!3m2!1sen!2sus!4v1721193617440!5m2!1sen!2sus"
-							width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"></iframe>
-					</div><br />
-				</div>
 			</div>
-		</div>
-		<!--/.container-->
+			<!--/.container-->
 	</section>
-	<!--/#north-america-->
 
 	<section id="aboutus" class="page-section pdingBtm30">
 		<div class="container">
@@ -154,95 +153,8 @@
 					club has given scholarships, provided Thanksgiving meals, and shopped for families at Christmas,
 					making a positive impact on the community.
 				</p>
-				<!-- The above is condensed (chatgpt :} from below) -->
-				<!-- <p>
-					In the summer of 2004 a group of guys got together to show off some of their classic cars from
-					around the Winterset area. Those “guys” were: Ray Dawson, Bill McDonald, Bob Stephens, Roger Hanson,
-					Dan Bush and Terry Housman. They thought this was such a good thing to do that the following year,
-					2005 the Central Iowa Auto Club was started. First it was a couple times during the summer and then
-					the chamber of commerce contacted us on running the Madison County Car Show during the bridge
-					festival. We accepted the offer and so it started, show and shines and car shows.
-				</p>
-				<p>
-					In 2006 we set up a schedule of 6 show and shines, once a month from April to September out at the
-					Sports Page Bar parking lot. The shows were two on Thursday evening’s from 6-8 pm and the other four
-					were on Saturdays from 2-4 pm. These show and shines were very successful, but the parking lot was
-					in such disrepair, that we moved the shows out to the Maid-Rite in 2008. Again, the shows were so
-					popular that we were running out of space and had to move again.
-				</p>
-				<p>
-					This time in 2013, we asked the chamber about allowing us to have one side of the square from 4-7 pm
-					on the second Saturday of the month. They welcomed us with open arms to help promote the business on
-					the square. We now block off the north side of the square and ½ the block on the west side.
-					Sometimes we have had cars parked down the middle of the street as this was not enough area on some
-					days.
-					We have had very good luck with all the businesses on the square not complaining about parking, but
-					some have thanked us as it sometimes help bring in business in to their stores.
-				</p>
-				<p>
-					In 2005 we started out as Central Iowa Auto Club. As the years went by, things were getting to the
-					point that we needed to do something about protecting our selves, so we talked to an attorney and
-					proceeded with getting incorporated. In 2015 we were about to get a donation from a local person,
-					Marvin Cox, of a 1938 Packard. In order for us not to get overwhelmed, we finally concluded that it
-					was in our best interest to go for a non-profit filing. So in June of 2016 I received a letter
-					stating that we had been accepted as a 501(3) C Non-Profit organization. This helped us out on not
-					having to pay taxes on the donation of the Packard.
-				</p>
-				<p>
-					Over the years we have given out several $500 scholarships, we have helped families at Thanksgiving
-					by buying food for the Thanksgiving dinner, and at Christmas, we go shopping for more families for
-					CRISP and buy clothing and toys to put under the Christmas tree. The Christmas shopping is a fun
-					event for us as we get together as a group and go to Walmart and buy as much as we can for each
-					family (we set a limit on each family member) then afterwards we go out a celebrate to one of the
-					local restaurants and have a evening meal.
-				</p> -->
 	</section>
 
-	<!-- <footer class="page-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-6 about">
-					<a href="#" class="logoDark">
-						<h4>WebThemez</h4>
-					</a>
-					<p>Lorem ipsum dolor amet, consectetur adipiscing elit. Aenean
-						leo lectus sollicitudin convallis eget libero. Aliquam laoreet
-						tellus ut libero semper, egestas velit malesuada. Sed non
-						risus eget dolor amet vestibulum ullamcorper. Integer feugiat
-						molestie.</p>
-					<ul class="socialIcons">
-						<li><a href="#" class="fbIcon" target="_blank"><i class="fa fa-facebook-square fa-lg""></i></a></li>
-              <li><a href=" #" class="twitterIcon" target="_blank"><i class="fa fa-twitter-square fa-lg""></i></a></li>
-              <li><a href=" #" class="googleIcon" target="_blank"><i class="fa fa-google-plus-square fa-lg""></i></a></li>
-              <li><a href=" #" class="pinterest" target="_blank"><i class="fa fa-pinterest-square fa-lg""></i></a></li>
-            </ul>
-          </div>
-          <div class=" col-md-4 col-sm-6 twitter">
-												<h4>Latest Tweets</h4>
-												<ul>
-													<li><a href="#">@John Doe</a> Lorem ipsum dolor amet, consectetur
-														adipiscing
-														elit. Aenean leo lectus sollicitudin eget libero.<br><span>2
-															minutes ago</span></li>
-													<li><a href="#">@John Doe</a> Lorem ipsum dolor amet, consectetur
-														adipiscing
-														elit. Aenean leo lectus sollicitudin eget libero.<br><span>About
-															an hour ago</span></li>
-												</ul>
-				</div>
-				<div class="col-md-4 contact">
-					<h4>Contact Info</h4>
-					<p>Lorem ipsum dolor amet, consectetur adipiscing ipsum dolor.</p>
-					<ul>
-						<li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						<li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
-					</ul>
-				</div>
-			</div><!-- END Row -->
-		</div>
-	</footer> -->
-	<!--/.page-section-->
 	<section class="copyright">
 		<div class="container">
 			<div class="row">
@@ -250,7 +162,12 @@
 					Copyright 2024 All Rights Reserved <div class="pull-right">Template by <a
 							href="http://webThemez.com"> WebThemez.com</a></div>
 				</div>
-			</div> <!-- / .row -->
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					Created by: Corbin Kems, Braden Buckalew
+				</div>
+			</div>
 		</div>
 	</section>
 	<a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a>
