--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 						<li><a href="#aboutus" class="scroll-link">About us</a></li>
 					</ul>
 				</div>
-				<!--/.navbar-collapse-->
 			</nav>
 			<!--/.navbar-->
 		</div>
@@ -87,7 +86,7 @@
 					</div>
 					<div class="col-lg-12" id="registration">
 						<h2>Madison County Car Show Registration</h2>
-						<a class="link" href="http://qrto.ai/u-qNWBT1" target="_blank" rel="noopener noreferrer">Click
+						<a class="link" href="https://docs.google.com/forms/d/1m5nOByZeYqRFjCNwHqY4eih8n1Kw9zZOmJSQU6OFnCQ/edit" target="_blank" rel="noopener noreferrer">Click
 							here</a>
 						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
