--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="css/styles.css" />
 	<!-- Font Awesome -->
 	<link href="font/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 <body>
