--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 						<li class="active"><a href="#home" class="scroll-link">Home</a></li>
 						<li><a href="#nextshow" class="scroll-link">2024 shows</a></li>
 						<li><a href="#registration" class="scroll-link">Registration</a></li>
+						<li><a href="#schedule" class="scroll-link">Schedule</a></li>
 						<li><a href="#contactus" class="scroll-link">Contact us</a></li>
 						<li><a href="#aboutus" class="scroll-link">About us</a></li>
 					</ul>
@@ -91,6 +92,10 @@
 							here</a>
 						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
+					</div>
+					<div class="col-lg-12" id="schedule">
+						<h2>Schedule</h2>
+						<iframe src="https://calendar.google.com/calendar/embed?src=6ef7cf6aca286baf31db9f4dad79cd9790cea489527ed9e6ccaadf9e6d1f11a9%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 					</div>
 				</div>
 			</div>
