--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-lg-12">
-						<h2>2024 shows</h2>
-						<img src="images/ENWIAdd121123_4.jpg" style="width: 75%">
+						<h2>2025 shows</h2>
+						<img src="images/2025-CIA-Ad-04-1.png" style="width: 75%">
 					</div>
 					<div class="col-lg-12" id="registration">
+						<h2>Registration will open this summer!</h2>
+
+					</div>
+					<!-- <div class="col-lg-12" id="registration">
 						<h2>Madison County Car Show Registration</h2>
 						<a class="link" href="https://docs.google.com/forms/d/1m5nOByZeYqRFjCNwHqY4eih8n1Kw9zZOmJSQU6OFnCQ/edit" target="_blank" rel="noopener noreferrer">Click
 							here</a>
 						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
-					</div>
+					</div> -->
 					<div class="col-lg-12" id="schedule">
 						<h2>Schedule</h2>
 						<iframe src="https://calendar.google.com/calendar/embed?src=6ef7cf6aca286baf31db9f4dad79cd9790cea489527ed9e6ccaadf9e6d1f11a9%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
