--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 						<h2>Or scan</h2>
 						<img src="images/2024-MCCS-Registration.png" style="width: 50%">
 					</div> -->
-					<div class="col-lg-12" id="schedule" style="overflow-x: auto">
+					<div class="col-lg-12" id="schedule">
 						<h2>Schedule</h2>
-						<iframe src="https://calendar.google.com/calendar/embed?src=6ef7cf6aca286baf31db9f4dad79cd9790cea489527ed9e6ccaadf9e6d1f11a9%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+						<div style="overflow-x: auto">
+							<iframe src="https://calendar.google.com/calendar/embed?src=6ef7cf6aca286baf31db9f4dad79cd9790cea489527ed9e6ccaadf9e6d1f11a9%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+						</div>
 					</div>
 				</div>
 			</div>
