--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 						<img src="images/2025-CIA-Ad-04-1.png" style="width: 75%">
 					</div>
 					<div class="col-lg-12" id="registration">
-						<h2>Registration will open this summer!</h2>
-
+						<a class="link" href="https://docs.google.com/forms/d/1m5nOByZeYqRFjCNwHqY4eih8n1Kw9zZOmJSQU6OFnCQ/edit"
+								target="_blank" rel="noopener noreferrer">Click here to register</a>
 					</div>
 					<!-- <div class="col-lg-12" id="registration">
 						<h2>Madison County Car Show Registration</h2>
